Closed Bug 746371 Opened 14 years ago Closed 14 years ago

keywords set by pop3 incoming filters aren't written into the berkeley mailbox

Categories

(MailNews Core :: Backend, defect, P1)

defect

Tracking

(thunderbird12+ fixed, thunderbird13+ fixed)

VERIFIED FIXED
Thunderbird 14.0
Tracking Status
thunderbird12 + fixed
thunderbird13 + fixed

People

(Reporter: Bienvenu, Assigned: Bienvenu)

Details

Attachments

(1 file, 2 obsolete files)

pop3 filters on new incoming messages don't write the keywords into the mailbox, which means if the folder is reparsed, we'll lose the keywords. The issue is that the output stream that berkeley mailboxes use for new messages isn't also an input stream, which means that the change keywords code can't get an input stream to figure out where to write the keyword change. I believe flag changes would also have this issue. I have a relatively simple fix for this. I'll try to write a test for it as well. The fix will mean that you can change flags while download is going on, which didn't used to be the case. The pop3 download code always seeks to the end of the stream before writing data, so we shouldn't get issues of messages getting written into the middle of the folder, but I'd want to bang on it for a bit to make sure.
I discovered mark read/unread and mark flagged pop3 filter actions weren't going through the folder.
Attachment #615911 - Attachment is obsolete: true
Attachment #615944 - Flags: review?(mbanner)
Severity: normal → major
Status: NEW → ASSIGNED
Priority: -- → P1
Attachment #615944 - Attachment is obsolete: true
Attachment #615944 - Flags: review?(mbanner)
Attachment #615948 - Flags: review?(mbanner)
OS: Windows 7 → All
Hardware: x86_64 → All
Comment on attachment 615948 [details] [diff] [review] remove commented out code Review of attachment 615948 [details] [diff] [review]: ----------------------------------------------------------------- Looks good. r+a=me.
Attachment #615948 - Flags: review?(mbanner)
Attachment #615948 - Flags: review+
Attachment #615948 - Flags: approval-comm-beta+
Attachment #615948 - Flags: approval-comm-aurora+
Checked Tb truk 4/19 build on Win-XP. > Mozilla/5.0 (Windows NT 5.1; rv:14.0) Gecko/20120419 Thunderbird/14.0a1 Filter rule actions. > type="1" > action="AddTag" > actionValue="zz" > action="Mark read" > action="Mark flagged" > action="Move to folder" > actionValue="mailbox:// ... " After filter application upon download, following header was written in move target folder. > X-Mozilla-Status: 0005 > X-Mozilla-Status2: 00000000 > X-Mozilla-Keys: xx VERIFIED.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: