Bug 746371 - keywords set by pop3 incoming filters aren't written into the berkeley mailbox. r+a=Standard8