mailnews/local/src/nsParseMailbox.cpp
@@ -2145,7 +2145,11 @@ NS_IMETHODIMP nsParseNewMailState::ApplyFilterHit(nsIMsgFilter *filter, nsIMsgWi
         msgHdr->OrFlags(nsMsgMessageFlags::Watched, &newFlags);
         break;
       case nsMsgFilterAction::MarkFlagged:
-        msgHdr->MarkFlagged(true);
+        {
+          nsCOMPtr<nsIMutableArray> messageArray(do_CreateInstance(NS_ARRAY_CONTRACTID));
+          messageArray->AppendElement(msgHdr, false);
+          m_downloadFolder->MarkMessagesFlagged(messageArray, true);
+        }
         break;
       case nsMsgFilterAction::ChangePriority:
         nsMsgPriorityValue filterPriority;
@@ -2344,16 +2348,9 @@ nsresult nsParseNewMailState::ApplyForwardAndReplyFilter(nsIMsgWindow *msgWindow
 
 void nsParseNewMailState::MarkFilteredMessageRead(nsIMsgDBHdr *msgHdr)
 {
-  PRUint32 newFlags;
-  if (m_mailDB)
-  {
-    m_mailDB->MarkHdrRead(msgHdr, true, nsnull);
-  }
-  else
-  {
-    msgHdr->OrFlags(nsMsgMessageFlags::Read, &newFlags);
-    msgHdr->AndFlags(~nsMsgMessageFlags::New, &newFlags);
-  }
+  nsCOMPtr<nsIMutableArray> messageArray(do_CreateInstance(NS_ARRAY_CONTRACTID));
+  messageArray->AppendElement(msgHdr, false);
+  m_downloadFolder->MarkMessagesRead(messageArray, true);
 }
 
 void nsParseNewMailState::MarkFilteredMessageUnread(nsIMsgDBHdr *msgHdr)
@@ -2364,13 +2361,14 @@ void nsParseNewMailState::MarkFilteredMessageUnread(nsIMsgDBHdr *msgHdr)
     nsMsgKey msgKey;
     msgHdr->GetMessageKey(&msgKey);
     m_mailDB->AddToNewList(msgKey);
-    m_mailDB->MarkHdrRead(msgHdr, false, nsnull);
   }
   else
   {
-    msgHdr->AndFlags(~nsMsgMessageFlags::Read, &newFlags);
     msgHdr->OrFlags(nsMsgMessageFlags::New, &newFlags);
   }
+  nsCOMPtr<nsIMutableArray> messageArray(do_CreateInstance(NS_ARRAY_CONTRACTID));
+  messageArray->AppendElement(msgHdr, false);
+  m_downloadFolder->MarkMessagesRead(messageArray, false);
 }
 
 nsresult nsParseNewMailState::EndMsgDownload()
